<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:background="@drawable/card_shadow">

    <LinearLayout
        android:id="@+id/card_departures_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_bus"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/times"
            android:textSize="16dp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <View
        android:id="@+id/card_departures_body"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/card_departures_header"
        android:background="@color/grey_500"
        android:layout_marginBottom="10dp">

    </View>

    <LinearLayout
        android:id="@+id/card_content"
        android:layout_below="@+id/card_departures_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:layout_weight="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_weekday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:background="@color/white"
                android:layout_marginTop="6dp"
                android:orientation="vertical"
                app:layoutManager="LinearLayoutManager"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/loader_weekday"
                style="@style/Widget.AppCompat.ProgressBar"
                android:background="@drawable/progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="visible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:background="@color/white"
                android:layout_marginTop="6dp"
                android:orientation="vertical"
                app:layoutManager="LinearLayoutManager"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/loader_saturday"
                style="@style/Widget.AppCompat.ProgressBar"
                android:background="@drawable/progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="visible"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:background="@color/white"
                android:layout_marginTop="6dp"
                android:orientation="vertical"
                app:layoutManager="LinearLayoutManager"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/loader_sunday"
                android:background="@drawable/progress"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="visible"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
